# zero

./: .codeclimate.yml  .travis.yml  LICENSE  README.md  zero.cabal
app/: Main.hs
src/: Camera.hs  Player.hs  Representation.hs  Tetrahedron.hs
test/: Spec.hs
