name:                zero
version:             0.1.1.6
synopsis:            A silly little game project.
description:         Please see README.md
homepage:            http://github.com/piotrjustyna/zero#readme
license:             BSD3
license-file:        LICENSE
author:              Piotr Justyna
maintainer:          piotr.justyna@gmail.com
copyright:           Piotr Justyna
category:            Games
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:       src
  exposed-modules:      Player
  build-depends:        base >= 4.7 && < 5,
                        GPipe
  default-language:     Haskell2010

executable zero-exe
  hs-source-dirs:       app
  main-is:              Main.hs
  ghc-options:          -threaded -rtsopts -with-rtsopts=-N
  build-depends:        base,
                        GPipe,
                        GPipe-GLFW,
                        zero
  default-language:     Haskell2010

test-suite zero-test
  type:                 exitcode-stdio-1.0
  hs-source-dirs:       test
  main-is:              Spec.hs
  build-depends:        base,
                        zero,
                        GPipe,
                        QuickCheck
  ghc-options:          -threaded -rtsopts -with-rtsopts=-N
  default-language:     Haskell2010

source-repository head
  type:                 git
  location:             https://github.com/piotrjustyna/zero
